--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <title>Tin Dang's Blog</title>
 </head>
 <body>
-  Hello World
+  <header>
+    <img src="assets/van-night.jpg" alt="background photo">
+  </header>
 </body>
 </html>
