--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/van-night.jpg" alt="background photo">
+    <img src="assets/van-night.jpg" alt="Credit to Thanh Dang photography @thanhdang68">
   </header>
 </body>
 </html>
